# wowthing-sync

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  generate-update-file.js  generate-update-file.mjs  generate-update-file.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
.github/: git-commit-instructions.md
.github/workflows/: dev.yml  release.yml  rust-tests.yml  static-pages.yml  test.yml  ui-tests.yml  updater.yml
apps/desktop/: nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
landing/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
marketing/: nuxt.config.ts
scripts/: clean-build-artifacts.sh
src/: app.config.ts  constants.ts  style.css
src-old/: style.css
src-old/components/: DynamicWindowFunctions.tsx
src-old/composables/: fileUpload.ts
src-old/pages/: index.tsx  logs.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  system_tray_menu.rs  thing_api.rs
src-tauri/src/setup/: desktop.rs  logs.rs  mac.rs  mod.rs  system_tray_menu.rs
src/components/: AppFooter.vue  AppHeader.vue  BuildInfo.tsx  Header.tsx  UpdateBanner.tsx  UpdateBanner.vue
src/composables/: apiStorage.ts  fileUpload.ts  programFolder.ts  useAutoStart.ts  useFileUpload.ts  useNotifications.ts  useProgramFolder.ts  useUpdater.ts
src/layouts/: default.vue
src/pages/: _app.tsx  index.tsx  index.vue  logs.tsx  settings.vue
src/providers/: LogProvider.tsx  UpdateProvider.tsx
(+45 files in other folders)
