[package]
name = "wowthing-sync"
version = "0.0.0"
description = "A Tauri App"
authors = ["CalebSmithDev"]
license = "MIT"
repository = "https://github.com/calebsmithdev/wowthing-sync"
edition = "2021"

[lib]
name = "wowthing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-process = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-os = "2.0.1"
tauri-plugin-notification = "2"

[dependencies.tauri]
version = "2"
features = [ "tray-icon" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11"
features = [ "json", "socks" ]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.0.2"
